Fixed no scrollbar style

--- a/apps/admin-x-design-system/styles.css
+++ b/apps/admin-x-design-system/styles.css
@@ -97,7 +97,3 @@
 .gh-prose-links a {
     color: #30CF43;
 }
-
-.scrollbar-hidden {
-    scrollbar-width: none;
-}
